--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@ layout: compress
 <html lang="en">
     {% include head.html %}
     <body>
+		This is here
         {% include svg-icons.html %}
         {% include header-default.html %}
             <main role="main" class="content">
