--- a/_includes/header-default.html
+++ b/_includes/header-default.html
@@ -14,7 +14,7 @@
                 <svg class="icon icon-email"><use xlink:href="#icon-email"></use></svg>
             </a>
 
-            <a aria-label="My Instagram" title="Follow me on Instagram" target="_blank" href="https://www.instagram.com/{{site.twitter_username}}">
+            <a aria-label="My Instagram" title="Follow me on Instagram" target="_blank" href="https://www.instagram.com/{{site.instagram_username}}">
                 <svg class="icon icon-twitter"><use xlink:href="#icon-instagram"></use></svg>
             </a>
 
