--- a/_includes/header-default.html
+++ b/_includes/header-default.html
@@ -15,7 +15,7 @@
             </a>
 
             <a aria-label="My Instagram" title="Follow me on Instagram" target="_blank" href="https://www.instagram.com/{{site.instagram_username}}">
-                <svg class="icon icon-twitter"><use xlink:href="#icon-instagram"></use></svg>
+                <svg class="icon icon-instagram"><use xlink:href="#icon-instagram"></use></svg>
             </a>
 
             <a aria-label="My Github" title="Show my projects" target="_blank" href="https://github.com/{{site.github_username}}">
