--- a/_includes/header-default.html
+++ b/_includes/header-default.html
@@ -35,16 +35,16 @@
               {% endfor %}
         </ul>
 
-        <ul class="recent">
-            <p>Recent projects:</p>
-             {% for project in site.projects limit:3%}
-                <li>
-                    <a title="Show my recent project" href="{{ project.url}}">
-                        <h2 class="post-title" itemprop="name">{{ project.name }}</h2>
-                    </a>
-                </li>
-              {% endfor %}
-        </ul>
+        <!-- <ul class="recent"> -->
+            <!-- <p>Recent projects:</p> -->
+             <!-- {% for project in site.projects limit:3%} -->
+                <!-- <li> -->
+                    <!-- <a title="Show my recent project" href="{{ project.url}}"> -->
+                        <!-- <h2 class="post-title" itemprop="name">{{ project.name }}</h2> -->
+                    <!-- </a> -->
+                <!-- </li> -->
+              <!-- {% endfor %} -->
+        <!-- </ul> -->
 
     </div>
     {% include menu-search.html %}
