--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -5,26 +5,37 @@
 
 </section>
 
-<script type="text/javascript">
-
-    var disqus_loaded = false;
-
-    function load_disqus(){
-        disqus_loaded = true;
-        var disqus_shortname = '{{site.disqus_username}}';
-        var disqus_title = '{{page.title.replace("'", "\\'")}}';
-        var disqus_url = '{{page.url}}';
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        var ldr = document.getElementById('disqus_loader');
-    };
-
-    window.onscroll = function(e) {
-        if ((window.innerHeight + window.scrollY) >= (document.body.offsetHeight - 800)) {
-            //hit bottom of page
-            if (disqus_loaded==false)
-                load_disqus()
-        }
-    };
+<script src="https://apis.google.com/js/plusone.js"></script>
+<div id="comments"></div>
+<script>
+gapi.comments.render('comments', {
+    href: window.location,
+    width: '624',
+    first_party_property: 'BLOGGER',
+    view_type: 'FILTERED_POSTMOD'
+});
 </script>
+
+<!-- <script type="text/javascript"> -->
+
+    <!-- var disqus_loaded = false; -->
+
+    <!-- function load_disqus(){ -->
+        <!-- disqus_loaded = true; -->
+        <!-- var disqus_shortname = '{{site.disqus_username}}'; -->
+        <!-- var disqus_title = '{{page.title.replace("'", "\\'")}}'; -->
+        <!-- var disqus_url = '{{page.url}}'; -->
+        <!-- var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true; -->
+        <!-- dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js'; -->
+        <!-- (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq); -->
+        <!-- var ldr = document.getElementById('disqus_loader'); -->
+    <!-- }; -->
+
+    <!-- window.onscroll = function(e) { -->
+        <!-- if ((window.innerHeight + window.scrollY) >= (document.body.offsetHeight - 800)) { -->
+            <!-- //hit bottom of page -->
+            <!-- if (disqus_loaded==false) -->
+                <!-- load_disqus() -->
+        <!-- } -->
+    <!-- }; -->
+<!-- </script> -->
