--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -7,13 +7,13 @@
 
 <script src="https://apis.google.com/js/plusone.js"></script>
 <div id="comments"></div>
-<script>
-gapi.comments.render('comments', {
-    href: window.location,
-    width: '624',
-    first_party_property: 'BLOGGER',
-    view_type: 'FILTERED_POSTMOD'
-});
+<script  type="text/javascript">
+	gapi.comments.render('comments', {
+		href: window.location,
+		width: '624',
+		first_party_property: 'BLOGGER',
+		view_type: 'FILTERED_POSTMOD'
+	});
 </script>
 
 <!-- <script type="text/javascript"> -->
