--- a/_includes/menu-search.html
+++ b/_includes/menu-search.html
@@ -23,16 +23,16 @@
                          | replace: '/', '-'
                          | replace: '.html', '.md' %}
     <ul>
-      <li><span>1</span></li>
-      <li><span> {{page.url}}</span></li>
+      <li><span> </span></li>
+      <li><span> </span></li>
       <li><span> blogspace </span></li>
-      <li><span>* Menu</span></li>
+      <li><span> </span></li>
     </ul>
 
     <ul>
-      <li><span>utf-8</span></li>
-      <li><span>web</span></li>
-      <li><span>.html</span></li>
+      <li><span> </span></li>
+      <li><span> </span></li>
+      <li><span> </span></li>
     </ul>
   </div>
 
