--- a/_includes/menu-search.html
+++ b/_includes/menu-search.html
@@ -23,16 +23,16 @@
                          | replace: '/', '-'
                          | replace: '.html', '.md' %}
     <ul>
-      <li><span> </span></li>
-      <li><span> </span></li>
+      <li><span> 1 </span></li>
+      <li><span> / </span></li>
       <li><span> blogspace </span></li>
-      <li><span> </span></li>
+      <li><span> / </span></li>
     </ul>
 
     <ul>
-      <li><span> </span></li>
-      <li><span> </span></li>
-      <li><span> </span></li>
+      <li><span> since</span></li>
+      <li><span> 2019</span></li>
+      <li><span> 02</span></li>
     </ul>
   </div>
 
