--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -9,8 +9,8 @@
 	*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 	
 	var disqus_config = function () {
-		this.page.url = "https://dlehgo14.github.io";  // Replace PAGE_URL with your page's canonical URL variable
-		this.page.identifier = "dlehgo14"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+		this.page.url = '{{page.url}}';  // Replace PAGE_URL with your page's canonical URL variable
+		this.page.identifier = '{{page.title.replace("'", "\\'")}}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 	};
 	
 	(function() { // DON'T EDIT BELOW THIS LINE
