--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,4 @@
----
-layout: analytics
----
-
+{% include analytics.html %}
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
