--- a/_includes/lectures/vision.html
+++ b/_includes/lectures/vision.html
@@ -1,2 +1,4 @@
 <h2>Related lectures</h2>
 <a href="https://dlehgo14.github.io/Lecture-Automata-Theory_1/">Computer Vision 1</a>
+<a href="https://dlehgo14.github.io/Lecture-Automata-Theory_2/">Computer Vision 2</a>
+
