--- a/_includes/lectures/vision.html
+++ b/_includes/lectures/vision.html
@@ -2,4 +2,4 @@
 <a href="https://dlehgo14.github.io/Lecture-Computer-Vision_1/">Computer Vision 1</a>
 <a href="https://dlehgo14.github.io/Lecture-Computer-Vision_2/">Computer Vision 2</a>
 <a href="https://dlehgo14.github.io/Lecture-Computer-Vision_3/">Computer Vision 3</a>
-
+<a href="https://dlehgo14.github.io/Lecture-Computer-Vision_4/">Computer Vision 4</a>
