--- a/_includes/lectures/automata.html
+++ b/_includes/lectures/automata.html
@@ -1,3 +1,4 @@
 <h2>Related lectures</h2>
 <a href="https://dlehgo14.github.io/Lecture-Automata-Theory_1/">Automata Theory 1</a>
 <a href="https://dlehgo14.github.io/Lecture-Automata-Theory_2/">Automata Theory 2</a>
+<a href="https://dlehgo14.github.io/Lecture-Automata-Theory_3/">Automata Theory 3</a>
