--- a/_includes/lectures/datamining.html
+++ b/_includes/lectures/datamining.html
@@ -1,2 +1,3 @@
 <h2>Related lectures</h2>
 <a href="https://dlehgo14.github.io/DataMining_1/">Data Mining 1</a>
+<a href="https://dlehgo14.github.io/Lecture-DataMining_2/">Data Mining 2</a>
